chore:refactor MedicalStockWardController and MedStockMovementTypeController